# calc

./: CLAUDE.md  Cargo.toml  THIRD-PARTY-LICENSES.html  about.hbs  about.toml  dist-workspace.toml
.github/workflows/: release.yml
docs/: README.md  architecture.md  currency.md  evaluation.md  lexer.md  numbers.md  parser.md  units.md
docs/plans/: 0_fix-unit-on-parenthesized-expr.md  1_dependency-upgrades.md  2_config-foundation.md  3_output-formatting-engine.md  4_format-operator-and-named-formatters.md  5_repl-config-control.md  6_currency-providers.md  7_ans-keyword.md  8_unit-algebra-derived-units.md  9_configurable-compound-groups.md
src/: config.rs  currency.rs  debug.rs  error.rs  files.rs  main.rs  node.rs  number.rs  number_op.rs  rational.rs  repl.rs  unit.rs  value.rs  value_op.rs
src/config/: mod.rs  registry.rs
src/currency/: mod.rs
src/currency/providers/: mnb.rs  mod.rs  static_provider.rs
src/parser/: lexer.rs  parser.rs  token.rs
tests/: cli.rs
