[package]
name = "calc"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.12.4"
strum = { version = "0.28", features = ["derive"] }
rustyline = "14.0.0"
thiserror = "2.0.18"
etcetera = "0.11"
ureq = "2.9.7"
quick-xml = { version = "0.40.0", features = ["serialize"] }
serde = { version = "1.0.228", features = ["derive"] }
chrono = { version = "0.4.45", features = ["serde"] }
